--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,90 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>paz</h1>
+    <header>
+        <div class="container">
+            <ul class="flex-container">
+                <li><a href="#">אודות</a>
+                    <div class="inner-menu">
+                        <ul>
+                            <li><a href="#">הסטוריה</a></li>
+                            <li><a href="#">חזון וערכים</a></li>
+                            <li><a href="#">מבנה הקבוצה</a></li>
+                            <li><a href="#">חברי דירקטוריון</a></li>
+                            <li><a href="#">הנהלת הקבוצה</a></li>
+                            <li><a href="#">פרסים והוקרה</a></li>
+                        </ul>
+            </ul>
+        </div>
+        </li>
+        <li><a href="#">חטיבות</a>
+            <div class="inner-menu">
+                <ul>
+                    <li><a href="#">חטיבות</a></li>
+                    <li><a href="#">קמעונאות</a></li>
+                    <li><a href="#">מבנה הקבוצה</a></li>
+                    <li><a href="#">חברי דירקטוריון</a></li>
+                </ul>
+        </li>
+        <li><a href="#">אחריות תאגידית</a>
+            <ul>
+                <li><a href="#">אחריות תאגידית</a></li>
+                <li><a href="#">הקוד האתי</a></li>
+                <li><a href="#">מעורבות חברתית</a></li>
+                <li><a href="#">נגישות</a></li>
+            </ul>
+        </li>
+        <li><a href="#">קשרי משקיעים</a>
+            <ul>
+                <li><a href="#">פרופיל החברה</a></li>
+                <li><a href="#">דוחו"ת כספיים</a></li>
+                <li><a href="#">כלים למשקיע</a></li>
+                <li><a href="#">נתוני מניה</a></li>
+                <li><a href="#">אסיפות כלליות</a></li>
+
+            </ul>
+        </li>
+        <li><a href="#">התחנות שלנו</a>
+            <ul>
+                <li><a href="#">התחנות שלנו</a></li>
+                <li><a href="#">נגישות מתחמי פז</a></li>
+                <li><a href="#">רשימת תחנות</a></li>
+                <li><a href="#">מועדונים</a></li>
+            </ul>
+        </li>
+        <li><a href="#">קריירה</a>
+            <ul>
+                <li><a href="#">לעבוד בפז</a></li>
+                <li><a href="#">ניהול תחנת פז</a></li>
+                <li><a href="#">קריירה</a></li>
+            </ul>
+
+        </li>
+        <li><a href="#">חדשות ומדיה</a>
+            <ul>
+                <li><a href="#">פרסומות</a></li>
+                <li><a href="#">הודעות לעיתונות</a></li>
+            </ul>
+        </li>
+        </ul>
+        </div>
+    </header>
+    <main class="container"></main>
+    <footer>
+        <div class="container">
+            <div class="cube">
+                <img src="images/1908364606615453350.jpg">
+                <div class="content">
+                    <h4>קמעונאות ומסחר</h4>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
+                    <a href="#"> קרא עוד</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
