--- a/index.html
+++ b/index.html
@@ -13,74 +13,73 @@
     <header>
         <div class="container">
             <ul class="flex-container">
-                <li><a href="#">אודות</a>
+                <li class="about"><a class="menu" href="#">אודות</a>
                     <div class="inner-menu">
-                        <ul>
-                            <li><a href="#">הסטוריה</a></li>
-                            <li><a href="#">חזון וערכים</a></li>
-                            <li><a href="#">מבנה הקבוצה</a></li>
-                            <li><a href="#">חברי דירקטוריון</a></li>
-                            <li><a href="#">הנהלת הקבוצה</a></li>
-                            <li><a href="#">פרסים והוקרה</a></li>
-                        </ul>
-            </ul>
-        </div>
-        </li>
-        <li><a href="#">חטיבות</a>
-            <div class="inner-menu">
-                <ul>
-                    <li><a href="#">חטיבות</a></li>
-                    <li><a href="#">קמעונאות</a></li>
-                    <li><a href="#">מבנה הקבוצה</a></li>
-                    <li><a href="#">חברי דירקטוריון</a></li>
-                </ul>
-        </li>
-        <li><a href="#">אחריות תאגידית</a>
-            <ul>
-                <li><a href="#">אחריות תאגידית</a></li>
-                <li><a href="#">הקוד האתי</a></li>
-                <li><a href="#">מעורבות חברתית</a></li>
-                <li><a href="#">נגישות</a></li>
-            </ul>
-        </li>
-        <li><a href="#">קשרי משקיעים</a>
-            <ul>
-                <li><a href="#">פרופיל החברה</a></li>
-                <li><a href="#">דוחו"ת כספיים</a></li>
-                <li><a href="#">כלים למשקיע</a></li>
-                <li><a href="#">נתוני מניה</a></li>
-                <li><a href="#">אסיפות כלליות</a></li>
+                        <a href="#">הסטוריה</a>
+                        <a href="#">חזון וערכים</a>
+                        <a href="#">מבנה הקבוצה</a>
+                        <a href="#">חברי דירקטוריון</a>
+                        <a href="#">הנהלת הקבוצה</a>
+                        <a href="#">פרסים והוקרה</a>
+                    </div>
+                </li>
 
-            </ul>
-        </li>
-        <li><a href="#">התחנות שלנו</a>
-            <ul>
-                <li><a href="#">התחנות שלנו</a></li>
-                <li><a href="#">נגישות מתחמי פז</a></li>
-                <li><a href="#">רשימת תחנות</a></li>
-                <li><a href="#">מועדונים</a></li>
-            </ul>
-        </li>
-        <li><a href="#">קריירה</a>
-            <ul>
-                <li><a href="#">לעבוד בפז</a></li>
-                <li><a href="#">ניהול תחנת פז</a></li>
-                <li><a href="#">קריירה</a></li>
-            </ul>
+                <li class="divisions"><a class="menu" href="#">חטיבות</a>
+                    <div class="inner-menu">
+                        <a href="#">חטיבות</a>
+                        <a href="#">קמעונאות</a>
+                        <a href="#">מבנה הקבוצה</a>
+                        <a href="#">חברי דירקטוריון</a>
+                    </div>
+                </li>
 
-        </li>
-        <li><a href="#">חדשות ומדיה</a>
-            <ul>
-                <li><a href="#">פרסומות</a></li>
-                <li><a href="#">הודעות לעיתונות</a></li>
+                <li class="corporate-responsibility"><a class="menu" href="#">אחריות תאגידית</a>
+                    <div class="inner-menu">
+                        <a href="#">אחריות תאגידית</a>
+                        <a href="#">הקוד האתי</a>
+                        <a href="#">מעורבות חברתית</a>
+                        <a href="#">נגישות</a>
+                    </div>
+                </li>
+                <li class="Investor relations"><a class="menu" href="#">קשרי משקיעים</a>
+                    <div class="inner-menu">
+                        <a href="#">פרופיל החברה</a>
+                        <a href="#">דוחו"ת כספיים</a>
+                        <a href="#">כלים למשקיע</a>
+                        <a href="#">נתוני מניה</a>
+                        <a href="#">אסיפות כלליות</a>
+                    </div>
+
+                </li>
+                <li class="Investor-relations"><a class="menu" href="#">התחנות שלנו</a>
+                    <div class="inner-menu">
+                        <a href="#">התחנות שלנו</a>
+                        <a href="#">נגישות מתחמי פז</a>
+                        <a href="#">רשימת תחנות</a>
+                        <a href="#">מועדונים</a>
+                    </div>
+
+                </li>
+                <li class="Investor-relations"><a class="menu" href="#">קריירה</a>
+                    <div class="inner-menu">
+                        <a href="#">לעבוד בפז</a>
+                        <a href="#">ניהול תחנת פז</a>
+                        <a href="#">קריירה</a>
+                    </div>
+
+                </li>
+                <li class="Investor-relations"><a class="menu" href="#">חדשות ומדיה</a>
+                    <div class="inner-menu">
+                        <a href="#">פרסומות</a>
+                        <a href="#">הודעות לעיתונות</a>
+                    </div>
+                </li>
             </ul>
-        </li>
-        </ul>
         </div>
     </header>
     <main class="container"></main>
     <footer>
-        <div class="container">
+        <!-- <div class="container">
             <div class="cube">
                 <img src="images/1908364606615453350.jpg">
                 <div class="content">
@@ -90,7 +89,7 @@
                     <a href="#"> קרא עוד</a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </footer>
 </body>
 
