--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
 
 <body>
     <header>
+
+
+        <div class="paz-logo">
+            <img src="/images/paz_logo.png">
+        </div>
+
         <div class="container">
+                <button>serch</button>
+
             <ul class="flex-container">
-                <li class="about"><a class="menu" href="#">אודות</a>
+                <li> <a href="index.html"><img src="/images/menu_home.png"></a> </li>
+                <li class="about"><a class="top-menu" href="#">אודות</a>
                     <div class="inner-menu">
                         <a href="#">הסטוריה</a>
                         <a href="#">חזון וערכים</a>
@@ -24,7 +33,7 @@
                     </div>
                 </li>
 
-                <li class="divisions"><a class="menu" href="#">חטיבות</a>
+                <li class="divisions"><a class="top-menu" href="#">חטיבות</a>
                     <div class="inner-menu">
                         <a href="#">חטיבות</a>
                         <a href="#">קמעונאות</a>
@@ -33,7 +42,7 @@
                     </div>
                 </li>
 
-                <li class="corporate-responsibility"><a class="menu" href="#">אחריות תאגידית</a>
+                <li class="corporate-responsibility"><a class="top-menu" href="#">אחריות תאגידית</a>
                     <div class="inner-menu">
                         <a href="#">אחריות תאגידית</a>
                         <a href="#">הקוד האתי</a>
@@ -41,7 +50,8 @@
                         <a href="#">נגישות</a>
                     </div>
                 </li>
-                <li class="Investor relations"><a class="menu" href="#">קשרי משקיעים</a>
+
+                <li class="Investor relations"><a class="top-menu" href="#">קשרי משקיעים</a>
                     <div class="inner-menu">
                         <a href="#">פרופיל החברה</a>
                         <a href="#">דוחו"ת כספיים</a>
@@ -51,7 +61,7 @@
                     </div>
 
                 </li>
-                <li class="Investor-relations"><a class="menu" href="#">התחנות שלנו</a>
+                <li class="Investor-relations"><a class="top-menu" href="#">התחנות שלנו</a>
                     <div class="inner-menu">
                         <a href="#">התחנות שלנו</a>
                         <a href="#">נגישות מתחמי פז</a>
@@ -60,7 +70,7 @@
                     </div>
 
                 </li>
-                <li class="Investor-relations"><a class="menu" href="#">קריירה</a>
+                <li class="Investor-relations"><a class="top-menu" href="#">קריירה</a>
                     <div class="inner-menu">
                         <a href="#">לעבוד בפז</a>
                         <a href="#">ניהול תחנת פז</a>
@@ -68,7 +78,7 @@
                     </div>
 
                 </li>
-                <li class="Investor-relations"><a class="menu" href="#">חדשות ומדיה</a>
+                <li class="Investor-relations"><a class="top-menu" href="#">חדשות ומדיה</a>
                     <div class="inner-menu">
                         <a href="#">פרסומות</a>
                         <a href="#">הודעות לעיתונות</a>
