--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 
 <body>
     <header>
-
-
         <div class="paz-logo">
             <img src="/images/paz_logo.png">
         </div>
 
         <div class="container">
-                <button>serch</button>
+                <div class="flex-container-search">
+                        <a href="#">English</a>
+                        <input type="search" />
+                        <button><img src="/images/search_button.png" width="100%"></button>
+                      </div>                    
+
+         
 
             <ul class="flex-container">
                 <li> <a href="index.html"><img src="/images/menu_home.png"></a> </li>
@@ -32,7 +36,7 @@
                         <a href="#">פרסים והוקרה</a>
                     </div>
                 </li>
-
+                <li> <img src="/images/menu_sep.png"></a> </li>
                 <li class="divisions"><a class="top-menu" href="#">חטיבות</a>
                     <div class="inner-menu">
                         <a href="#">חטיבות</a>
@@ -41,7 +45,7 @@
                         <a href="#">חברי דירקטוריון</a>
                     </div>
                 </li>
-
+                <li> <img src="/images/menu_sep.png"></a> </li>
                 <li class="corporate-responsibility"><a class="top-menu" href="#">אחריות תאגידית</a>
                     <div class="inner-menu">
                         <a href="#">אחריות תאגידית</a>
@@ -50,7 +54,7 @@
                         <a href="#">נגישות</a>
                     </div>
                 </li>
-
+                <li> <img src="/images/menu_sep.png"></a> </li>
                 <li class="Investor relations"><a class="top-menu" href="#">קשרי משקיעים</a>
                     <div class="inner-menu">
                         <a href="#">פרופיל החברה</a>
@@ -59,7 +63,7 @@
                         <a href="#">נתוני מניה</a>
                         <a href="#">אסיפות כלליות</a>
                     </div>
-
+                <li> <img src="/images/menu_sep.png"></a> </li>
                 </li>
                 <li class="Investor-relations"><a class="top-menu" href="#">התחנות שלנו</a>
                     <div class="inner-menu">
@@ -68,7 +72,7 @@
                         <a href="#">רשימת תחנות</a>
                         <a href="#">מועדונים</a>
                     </div>
-
+                <li> <img src="/images/menu_sep.png"></a> </li>
                 </li>
                 <li class="Investor-relations"><a class="top-menu" href="#">קריירה</a>
                     <div class="inner-menu">
@@ -78,6 +82,8 @@
                     </div>
 
                 </li>
+                <li> <img src="/images/menu_sep.png"></a> </li>
+
                 <li class="Investor-relations"><a class="top-menu" href="#">חדשות ומדיה</a>
                     <div class="inner-menu">
                         <a href="#">פרסומות</a>
@@ -87,9 +93,8 @@
             </ul>
         </div>
     </header>
-    <main class="container"></main>
-    <footer>
-        <!-- <div class="container">
+    <main class="container">
+        <div class="container">
             <div class="cube">
                 <img src="images/1908364606615453350.jpg">
                 <div class="content">
@@ -99,7 +104,10 @@
                     <a href="#"> קרא עוד</a>
                 </div>
             </div>
-        </div> -->
+        </div>
+
+    </main>
+    <footer class="container">footer
     </footer>
 </body>
 
