--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </div>
 
         <div class="container">
-                <div class="flex-container-search">
-                        <a href="#">English</a>
-                        <input type="search" />
-                        <button><img src="/images/search_button.png" width="100%"></button>
-                      </div>                    
+            <div class="flex-container-search">
+                <a href="#">English</a>
+                <input type="search" />
+                <button><img src="/images/search_button.png" width="100%"></button>
+            </div>
 
-         
+
 
             <ul class="flex-container">
                 <li> <a href="index.html"><img src="/images/menu_home.png"></a> </li>
@@ -107,7 +107,29 @@
         </div>
 
     </main>
-    <footer class="container">footer
+    
+    <footer>
+        <div class="container">
+            <ul class="flex-container-footer">
+                <li><a href="https://www.facebook.com/YellowPaz" target="_blank"><img src="/images/fb_icon.png"></a></li>
+                <li><a class="footer-menu" href="#">עמוד הבית</a></li>
+                <li><img src="/images/menu_sep.png"></a></li>
+                <li><a class="footer-menu" href="#">מחירונים</a></li>
+                <li><img src="/images/menu_sep.png"></a></li>
+                <li><a class="footer-menu" href="#">קריירה</a></li>
+                <li><img src="/images/menu_sep.png"></a></li>
+                <li><a class="footer-menu" href="#">נגישות</a></li>
+                <li><img src="/images/menu_sep.png"></a></li>
+                <li><a class="footer-menu" href="#">מפת אתר</a></li>
+                <li><img src="/images/menu_sep.png"></a></li>
+                <li><a class="footer-menu" href="#">צור קשר</a></li>
+                <li><img src="/images/menu_sep.png"></a></li>
+                <li><a class="footer-menu" href="#">שטחי מסחר</a></li>
+                <li><img src="/images/menu_sep.png"></a></li>
+                <li><a class="footer-menu" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
+
+            </ul>
+        </div>
     </footer>
 </body>
 
