--- a/index.html
+++ b/index.html
@@ -93,24 +93,29 @@
             </ul>
         </div>
     </header>
+
     <main class="container">
-        <div class="container">
-            <div class="cube">
-                <img src="images/1908364606615453350.jpg">
-                <div class="content">
-                    <h4>קמעונאות ומסחר</h4>
-                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
-                    <a href="#"> קרא עוד</a>
-                </div>
-            </div>
+        <div class="flex-container">
+            <!-- <div class="cube"> -->
+            <img src="images/1908364606615453350.jpg">
+            <img src="images/Picture-046410251500.jpg">
+            <img src="images/פזקר_-291_354410564000.jpg">
         </div>
+            <div class="content">
+                <h4>קמעונאות ומסחר</h4>
+                <p>במסגרת חטיבת הקו"מ של פז
+                    מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                    בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
+                <a href="#"> קרא עוד</a>
+            </div>
+            <!-- </div> -->
+       
 
     </main>
-    
+
     <footer>
         <div class="container">
-            <ul class="flex-container-footer">
+            <!--  <ul class="flex-container-footer">
                 <li><a href="https://www.facebook.com/YellowPaz" target="_blank"><img src="/images/fb_icon.png"></a></li>
                 <li><a class="footer-menu" href="#">עמוד הבית</a></li>
                 <li><img src="/images/menu_sep.png"></a></li>
@@ -128,8 +133,27 @@
                 <li><img src="/images/menu_sep.png"></a></li>
                 <li><a class="footer-menu" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
 
-            </ul>
+            </ul> -->
+            <div class="f-menu">
+                <a href="https://www.facebook.com/YellowPaz" target="_blank"><img src="/images/fb_icon.png"></a>
+                <a class="footer-menu" href="#">עמוד הבית</a>
+                <img src="/images/menu_sep.png"></a>
+                <a class="footer-menu" href="#">מחירונים</a>
+                <img src="/images/menu_sep.png"></a></li>
+                <a class="footer-menu" href="#">קריירה</a>
+                <img src="/images/menu_sep.png"></a></li>
+                <a class="footer-menu" href="#">נגישות</a>
+                <img src="/images/menu_sep.png"></a></li>
+                <a class="footer-menu" href="#">מפת אתר</a>
+                <img src="/images/menu_sep.png"></a></li>
+                <a class="footer-menu" href="#">צור קשר</a>
+                <img src="/images/menu_sep.png"></a></li>
+                <a class="footer-menu" href="#">שטחי מסחר</a>
+                <img src="/images/menu_sep.png"></a>
+                <a class="footer-menu" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
+            </div>
         </div>
+
     </footer>
 </body>
 
