--- a/index.html
+++ b/index.html
@@ -101,39 +101,77 @@
             <img src="images/Picture-046410251500.jpg">
             <img src="images/פזקר_-291_354410564000.jpg">
         </div>
+        <!-- <div class="text-bg">
+            <img src="images/hp_tab_text_bg.png" width="100%" >
+        </div> -->
+        <div class="pos">
             <div class="content">
-                <h4>קמעונאות ומסחר</h4>
-                <p>במסגרת חטיבת הקו"מ של פז
-                    מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                    בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
-                <a href="#"> קרא עוד</a>
+                <img src="images/hp_tab_text_bg.png" width="100%">
+
+                <div class="text-on-pic">
+
+                    <p><span>קמעונאות ומסחר</span><br>
+                        במסגרת חטיבת הקו"מ של פז
+                        מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                        <a href="#"> קרא עוד</a>
+
+                    </p>
+                </div>
+
             </div>
-            <!-- </div> -->
-       
+        </div>
+
+        <div class="pos2">
+            <div class="content">
+                <img src="images/hp_tab_text_bg.png" width="100%">
+
+                <div class="text-on-pic">
+                    <p><span>קמעונאות ומסחר</span><br>
+                        במסגרת חטיבת הקו"מ של פז
+                        מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                        <a href="#"> קרא עוד</a>
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="pos3">
+            <div class="content">
+                <img src="images/hp_tab_text_bg.png" width="100%">
+
+                <div class="text-on-pic">
+                    <p><span>קמעונאות ומסחר</span><br>
+                        במסגרת חטיבת הקו"מ של פז
+                        מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                        <a href="#"> קרא עוד</a>
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- <div>
+            
+            <p>
+                במסגרת חטיבת הקו"מ של פז
+                מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                <a href="#"> קרא עוד</a>
+            </p>
+        </div> -->
+        <!-- </div> -->
+
 
     </main>
 
     <footer>
         <div class="container">
-            <!--  <ul class="flex-container-footer">
-                <li><a href="https://www.facebook.com/YellowPaz" target="_blank"><img src="/images/fb_icon.png"></a></li>
-                <li><a class="footer-menu" href="#">עמוד הבית</a></li>
-                <li><img src="/images/menu_sep.png"></a></li>
-                <li><a class="footer-menu" href="#">מחירונים</a></li>
-                <li><img src="/images/menu_sep.png"></a></li>
-                <li><a class="footer-menu" href="#">קריירה</a></li>
-                <li><img src="/images/menu_sep.png"></a></li>
-                <li><a class="footer-menu" href="#">נגישות</a></li>
-                <li><img src="/images/menu_sep.png"></a></li>
-                <li><a class="footer-menu" href="#">מפת אתר</a></li>
-                <li><img src="/images/menu_sep.png"></a></li>
-                <li><a class="footer-menu" href="#">צור קשר</a></li>
-                <li><img src="/images/menu_sep.png"></a></li>
-                <li><a class="footer-menu" href="#">שטחי מסחר</a></li>
-                <li><img src="/images/menu_sep.png"></a></li>
-                <li><a class="footer-menu" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a></li>
-
-            </ul> -->
             <div class="f-menu">
                 <a href="https://www.facebook.com/YellowPaz" target="_blank"><img src="/images/fb_icon.png"></a>
                 <a class="footer-menu" href="#">עמוד הבית</a>
