--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
                 <button><img src="/images/search_button.png" width="100%"></button>
             </div>
 
-
-
             <ul class="flex-container">
                 <li> <a href="index.html"><img src="/images/menu_home.png"></a> </li>
                 <li class="about"><a class="top-menu" href="#">אודות</a>
@@ -95,44 +93,38 @@
     </header>
 
     <main class="container">
-        <div class="flex-container">
-            <!-- <div class="cube"> -->
-            <img src="images/1908364606615453350.jpg">
-            <img src="images/Picture-046410251500.jpg">
-            <img src="images/פזקר_-291_354410564000.jpg">
-        </div>
-        <!-- <div class="text-bg">
-            <img src="images/hp_tab_text_bg.png" width="100%" >
-        </div> -->
-        <div class="pos">
-            <div class="content">
-                <img src="images/hp_tab_text_bg.png" width="100%">
-
-                <div class="text-on-pic">
-
-                    <p><span>קמעונאות ומסחר</span><br>
-                        במסגרת חטיבת הקו"מ של פז
-                        מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות, יעילות ומובילות. החטיבה פועלת...
-                        <a href="#"> קרא עוד</a>
-
-                    </p>
-                </div>
-
+            <div class="flex-container">
+                <img src="images/1908364606615453350.jpg">
+                <img src="images/Picture-046410251500.jpg">
+                <img src="images/פזקר_-291_354410564000.jpg">
             </div>
-        </div>
 
+            <div class="pos">
+                <div class="content">
+                    <img src="images/hp_tab_text_bg.png" width="100%">
+                    <div class="text-on-pic">
+                        <p><span>קמעונאות ומסחר</span><br>
+                            במסגרת חטיבת הקו"מ של פז
+                            מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                            בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                            <a href="#"> קרא עוד</a>
+
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        
         <div class="pos2">
             <div class="content">
                 <img src="images/hp_tab_text_bg.png" width="100%">
 
                 <div class="text-on-pic">
-                    <p><span>קמעונאות ומסחר</span><br>
+                    <p><span>זיקוק</span><br>
                         במסגרת חטיבת הקו"מ של פז
                         מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
                         בחדשנות, יעילות ומובילות. החטיבה פועלת...
                         <a href="#"> קרא עוד</a>
-
                     </p>
                 </div>
 
@@ -142,12 +134,10 @@
         <div class="pos3">
             <div class="content">
                 <img src="images/hp_tab_text_bg.png" width="100%">
-
                 <div class="text-on-pic">
-                    <p><span>קמעונאות ומסחר</span><br>
-                        במסגרת חטיבת הקו"מ של פז
-                        מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות, יעילות ומובילות. החטיבה פועלת...
+                    <p><span>תעשיות ושירותים </span><br>
+                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
+                        לוואי של נפט, ומובילות את השוק...
                         <a href="#"> קרא עוד</a>
 
                     </p>
@@ -155,18 +145,6 @@
 
             </div>
         </div>
-
-        <!-- <div>
-            
-            <p>
-                במסגרת חטיבת הקו"מ של פז
-                מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                בחדשנות, יעילות ומובילות. החטיבה פועלת...
-                <a href="#"> קרא עוד</a>
-            </p>
-        </div> -->
-        <!-- </div> -->
-
 
     </main>
 
