--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
             <div class="flex-container-search">
                 <a href="#">English</a>
                 <input type="search" />
-                <button><img src="/images/search_button.png" width="100%"></button>
+                <button>
+                    <img src="/images/search_button.png" width="100%">
+                </button>
             </div>
 
             <ul class="flex-container">
-                <li> <a href="index.html"><img src="/images/menu_home.png"></a> </li>
-                <li class="about"><a class="top-menu" href="#">אודות</a>
+                <li>
+                    <a href="index.html">
+                        <img src="/images/menu_home.png">
+                    </a>
+                </li>
+                <li class="about">
+                    <a class="top-menu" href="#">אודות</a>
                     <div class="inner-menu">
                         <a href="#">הסטוריה</a>
                         <a href="#">חזון וערכים</a>
@@ -34,8 +41,12 @@
                         <a href="#">פרסים והוקרה</a>
                     </div>
                 </li>
-                <li> <img src="/images/menu_sep.png"></a> </li>
-                <li class="divisions"><a class="top-menu" href="#">חטיבות</a>
+                <li>
+                    <img src="/images/menu_sep.png">
+                    </a>
+                </li>
+                <li class="divisions">
+                    <a class="top-menu" href="#">חטיבות</a>
                     <div class="inner-menu">
                         <a href="#">חטיבות</a>
                         <a href="#">קמעונאות</a>
@@ -43,8 +54,12 @@
                         <a href="#">חברי דירקטוריון</a>
                     </div>
                 </li>
-                <li> <img src="/images/menu_sep.png"></a> </li>
-                <li class="corporate-responsibility"><a class="top-menu" href="#">אחריות תאגידית</a>
+                <li>
+                    <img src="/images/menu_sep.png">
+                    </a>
+                </li>
+                <li class="corporate-responsibility">
+                    <a class="top-menu" href="#">אחריות תאגידית</a>
                     <div class="inner-menu">
                         <a href="#">אחריות תאגידית</a>
                         <a href="#">הקוד האתי</a>
@@ -52,8 +67,12 @@
                         <a href="#">נגישות</a>
                     </div>
                 </li>
-                <li> <img src="/images/menu_sep.png"></a> </li>
-                <li class="Investor relations"><a class="top-menu" href="#">קשרי משקיעים</a>
+                <li>
+                    <img src="/images/menu_sep.png">
+                    </a>
+                </li>
+                <li class="Investor relations">
+                    <a class="top-menu" href="#">קשרי משקיעים</a>
                     <div class="inner-menu">
                         <a href="#">פרופיל החברה</a>
                         <a href="#">דוחו"ת כספיים</a>
@@ -61,18 +80,26 @@
                         <a href="#">נתוני מניה</a>
                         <a href="#">אסיפות כלליות</a>
                     </div>
-                <li> <img src="/images/menu_sep.png"></a> </li>
+                    <li>
+                        <img src="/images/menu_sep.png">
+                        </a>
+                    </li>
                 </li>
-                <li class="Investor-relations"><a class="top-menu" href="#">התחנות שלנו</a>
+                <li class="Investor-relations">
+                    <a class="top-menu" href="#">התחנות שלנו</a>
                     <div class="inner-menu">
                         <a href="#">התחנות שלנו</a>
                         <a href="#">נגישות מתחמי פז</a>
                         <a href="#">רשימת תחנות</a>
                         <a href="#">מועדונים</a>
                     </div>
-                <li> <img src="/images/menu_sep.png"></a> </li>
+                    <li>
+                        <img src="/images/menu_sep.png">
+                        </a>
+                    </li>
                 </li>
-                <li class="Investor-relations"><a class="top-menu" href="#">קריירה</a>
+                <li class="Investor-relations">
+                    <a class="top-menu" href="#">קריירה</a>
                     <div class="inner-menu">
                         <a href="#">לעבוד בפז</a>
                         <a href="#">ניהול תחנת פז</a>
@@ -80,9 +107,13 @@
                     </div>
 
                 </li>
-                <li> <img src="/images/menu_sep.png"></a> </li>
+                <li>
+                    <img src="/images/menu_sep.png">
+                    </a>
+                </li>
 
-                <li class="Investor-relations"><a class="top-menu" href="#">חדשות ומדיה</a>
+                <li class="Investor-relations">
+                    <a class="top-menu" href="#">חדשות ומדיה</a>
                     <div class="inner-menu">
                         <a href="#">פרסומות</a>
                         <a href="#">הודעות לעיתונות</a>
@@ -93,44 +124,46 @@
     </header>
 
     <main class="container">
-            <div class="flex-container">
+        <div class="flex-container-main-photo">
+            <div class="cube">
                 <img src="images/1908364606615453350.jpg">
-                <img src="images/Picture-046410251500.jpg">
-                <img src="images/פזקר_-291_354410564000.jpg">
-            </div>
-
-            <div class="pos">
                 <div class="content">
-                    <img src="images/hp_tab_text_bg.png" width="100%">
-                    <div class="text-on-pic">
-                        <p><span>קמעונאות ומסחר</span><br>
-                            במסגרת חטיבת הקו"מ של פז
-                            מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                            בחדשנות, יעילות ומובילות. החטיבה פועלת...
-                            <a href="#"> קרא עוד</a>
-
-                        </p>
-                    </div>
-
-                </div>
-            </div>
-        
-        <div class="pos2">
-            <div class="content">
-                <img src="images/hp_tab_text_bg.png" width="100%">
-
-                <div class="text-on-pic">
-                    <p><span>זיקוק</span><br>
-                        במסגרת חטיבת הקו"מ של פז
-                        מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות, יעילות ומובילות. החטיבה פועלת...
-                        <a href="#"> קרא עוד</a>
+                    <h5>קמעונאות ומסחר</h5>
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                        יעילות ומובילות. החטיבה פועלת...
                     </p>
+                    <a href="#"> קרא עוד</a>
                 </div>
-
             </div>
-        </div>
 
+            <div class="cube">
+                <img src="images/Picture-046410251500.jpg">
+                <div class="content">
+                    <h5>זיקוק</h5>
+                    <p>
+                        במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה
+                        פועלת...
+                    </p>
+                    <a href="#"> קרא עוד</a>
+                </div>
+            </div>
+
+
+            <div class="cube">
+                <img src="images/פזקר_-291_354410564000.jpg">
+
+                <div class="content">
+                    <h5>תעשיות ושירותים </h5>
+                    <p>
+                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...
+                    </p>
+                    <a href="#"> קרא עוד</a>
+                </div>
+            </div>
+    </main>
+
+
+    <!-- 
         <div class="pos3">
             <div class="content">
                 <img src="images/hp_tab_text_bg.png" width="100%">
@@ -146,26 +179,40 @@
             </div>
         </div>
 
-    </main>
+    </main> -->-->
 
     <footer>
         <div class="container">
             <div class="f-menu">
-                <a href="https://www.facebook.com/YellowPaz" target="_blank"><img src="/images/fb_icon.png"></a>
+                <a href="https://www.facebook.com/YellowPaz" target="_blank">
+                    <img src="/images/fb_icon.png">
+                </a>
                 <a class="footer-menu" href="#">עמוד הבית</a>
-                <img src="/images/menu_sep.png"></a>
+                <img src="/images/menu_sep.png">
+                </a>
                 <a class="footer-menu" href="#">מחירונים</a>
-                <img src="/images/menu_sep.png"></a></li>
+                <img src="/images/menu_sep.png">
+                </a>
+                </li>
                 <a class="footer-menu" href="#">קריירה</a>
-                <img src="/images/menu_sep.png"></a></li>
+                <img src="/images/menu_sep.png">
+                </a>
+                </li>
                 <a class="footer-menu" href="#">נגישות</a>
-                <img src="/images/menu_sep.png"></a></li>
+                <img src="/images/menu_sep.png">
+                </a>
+                </li>
                 <a class="footer-menu" href="#">מפת אתר</a>
-                <img src="/images/menu_sep.png"></a></li>
+                <img src="/images/menu_sep.png">
+                </a>
+                </li>
                 <a class="footer-menu" href="#">צור קשר</a>
-                <img src="/images/menu_sep.png"></a></li>
+                <img src="/images/menu_sep.png">
+                </a>
+                </li>
                 <a class="footer-menu" href="#">שטחי מסחר</a>
-                <img src="/images/menu_sep.png"></a>
+                <img src="/images/menu_sep.png">
+                </a>
                 <a class="footer-menu" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
             </div>
         </div>
