--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </ul>
         </div>
     </header>
-
+    <!-- ------------------------------------------------------------------------------------ -->
     <main class="container">
         <div class="flex-container-main-photo">
             <div class="cube">
@@ -134,6 +134,7 @@
                     </p>
                     <a href="#"> קרא עוד</a>
                 </div>
+
             </div>
 
             <div class="cube">
@@ -148,7 +149,6 @@
                 </div>
             </div>
 
-
             <div class="cube">
                 <img src="images/פזקר_-291_354410564000.jpg">
 
@@ -160,6 +160,30 @@
                     <a href="#"> קרא עוד</a>
                 </div>
             </div>
+        </div>
+        <!-- --------------------------------------------------------------------------------- -->
+        <div class="flex-container-main-small-photo">
+            <div class="cube2">
+                <img src="images/small_cube_bg.png">
+                <div class="pic">
+
+                </div>
+            </div>
+
+            <div class="cube2">
+                <img src="images/small_cube_bg.png">
+                <div class="pic">
+
+                </div>
+            </div>
+
+            <div class="cube2">
+                <img src="images/small_cube_bg.png">
+                <div class="pic">
+
+                </div>
+            </div>
+
     </main>
 
 
