--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                         <a href="#">נתוני מניה</a>
                         <a href="#">אסיפות כלליות</a>
                     </div>
-                    <li>
-                        <img src="/images/menu_sep.png">
-                        </a>
-                    </li>
+                <li>
+                    <img src="/images/menu_sep.png">
+                    </a>
+                </li>
                 </li>
                 <li class="Investor-relations">
                     <a class="top-menu" href="#">התחנות שלנו</a>
@@ -93,10 +93,10 @@
                         <a href="#">רשימת תחנות</a>
                         <a href="#">מועדונים</a>
                     </div>
-                    <li>
-                        <img src="/images/menu_sep.png">
-                        </a>
-                    </li>
+                <li>
+                    <img src="/images/menu_sep.png">
+                    </a>
+                </li>
                 </li>
                 <li class="Investor-relations">
                     <a class="top-menu" href="#">קריירה</a>
@@ -122,14 +122,16 @@
             </ul>
         </div>
     </header>
-    <!-- ------------------------------------------------------------------------------------ -->
+    <!-- ------------------------------------------------------------------------------------
+    -------------------------------------main row 1------------------------------------------------ -->
     <main class="container">
         <div class="flex-container-main-photo">
             <div class="cube">
                 <img src="images/1908364606615453350.jpg">
                 <div class="content">
                     <h5>קמעונאות ומסחר</h5>
-                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות,
+                    <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות,
                         יעילות ומובילות. החטיבה פועלת...
                     </p>
                     <a href="#"> קרא עוד</a>
@@ -142,7 +144,8 @@
                 <div class="content">
                     <h5>זיקוק</h5>
                     <p>
-                        במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה
+                        במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
+                        בחדשנות, יעילות ומובילות. החטיבה
                         פועלת...
                     </p>
                     <a href="#"> קרא עוד</a>
@@ -155,55 +158,58 @@
                 <div class="content">
                     <h5>תעשיות ושירותים </h5>
                     <p>
-                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי לוואי של נפט, ומובילות את השוק...
+                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
+                        לוואי של נפט, ומובילות את השוק...
                     </p>
                     <a href="#"> קרא עוד</a>
                 </div>
             </div>
         </div>
-        <!-- --------------------------------------------------------------------------------- -->
+
+        <!-- --------------------------------main row 2 ------------------------------------------------- -->
         <div class="flex-container-main-small-photo">
             <div class="cube2">
                 <img src="images/small_cube_bg.png">
-                <div class="pic">
+                <div class="content2">
+                    <h5>כרטיס אשראי שופרסל וכרטיס אשראי יש</h5>
+                    <img src="images/paz_250x110059890678.jpg">
+                    <a href="#">לפרטים נוספים</a>
+                </div>
+            </div>
 
+
+            <div class="cube2">
+                <img src="images/small_cube_bg.png">
+                <div class="content2">
+                    <h5>כרטיס אשראי שופרסל וכרטיס אשראי יש</h5>
+                    <img src="images/paz_250x110103131473.jpg">
+                    <a href="#">לפרטים נוספים</a>
                 </div>
             </div>
 
             <div class="cube2">
                 <img src="images/small_cube_bg.png">
-                <div class="pic">
+                <div class="content2">
+                    <h5>כרטיס אשראי שופרסל וכרטיס אשראי יש</h5>
+                    <div id="pic">
+                        <a href="#"> צפון</a>
+                        <img src="images/read_more_yellow.png">
+                        <br>
+                        <a href="#"> מרכז</a>
+                        <img src="images/read_more_yellow.png">
+                        <br>
+                        <a href="#"> דרום</a>
+                        <img src="images/read_more_yellow.png">
+                    </div>
+                    <img id="map" src="images/Untitled-3058756287.jpg">
 
                 </div>
-            </div>
-
-            <div class="cube2">
-                <img src="images/small_cube_bg.png">
-                <div class="pic">
-
-                </div>
-            </div>
-
-    </main>
-
-
-    <!-- 
-        <div class="pos3">
-            <div class="content">
-                <img src="images/hp_tab_text_bg.png" width="100%">
-                <div class="text-on-pic">
-                    <p><span>תעשיות ושירותים </span><br>
-                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
-                        לוואי של נפט, ומובילות את השוק...
-                        <a href="#"> קרא עוד</a>
-
-                    </p>
-                </div>
-
             </div>
         </div>
+    </main>
 
-    </main> -->-->
+    <!-- ------------------------------------------------------------------------------------------------------- 
+------------------------------------------------------------------------------------------------------------->
 
     <footer>
         <div class="container">
