--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="cube2">
                 <img src="images/small_cube_bg.png">
                 <div class="content2">
-                    <h5>כרטיס אשראי שופרסל וכרטיס אשראי יש</h5>
+                    <h5>yellow click & pick</h5>
                     <img src="images/paz_250x110103131473.jpg">
                     <a href="#">לפרטים נוספים</a>
                 </div>
@@ -189,8 +189,8 @@
 
             <div class="cube2">
                 <img src="images/small_cube_bg.png">
-                <div class="content2">
-                    <h5>כרטיס אשראי שופרסל וכרטיס אשראי יש</h5>
+                <div class="content22">
+                    <h5>התחנות שלנו בדרך שלך</h5>
                     <div id="pic">
                         <a href="#"> צפון</a>
                         <img src="images/read_more_yellow.png">
