--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <div class="paz-logo">
+        <!-- <div class="paz-logo">
             <img src="/images/paz_logo.png">
-        </div>
+        </div> -->
 
         <div class="container">
             <div class="flex-container-search">
@@ -25,6 +25,8 @@
             </div>
 
             <ul class="flex-container">
+                <li> <img id="paz-logo" src="/images/paz_logo.png">
+                </li>
                 <li>
                     <a href="index.html">
                         <img src="/images/menu_home.png">
