--- a/index.html
+++ b/index.html
@@ -145,10 +145,8 @@
                 <img src="images/Picture-046410251500.jpg">
                 <div class="content">
                     <h5>זיקוק</h5>
-                    <p>
-                        במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
-                        בחדשנות, יעילות ומובילות. החטיבה
-                        פועלת...
+                    <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק
+                        באשדודהחטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...
                     </p>
                     <a href="#"> קרא עוד</a>
                 </div>
@@ -159,9 +157,8 @@
 
                 <div class="content">
                     <h5>תעשיות ושירותים </h5>
-                    <p>
-                        תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
-                        לוואי של נפט, ומובילות את השוק...
+                    <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
+                        לוואי של נפט, ת בפיתוח, ייצור ושיווק מוצרי לוואי של נפט,ומובילות את השוק...
                     </p>
                     <a href="#"> קרא עוד</a>
                 </div>
