--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
 
 <body>
     <header>
-        <!-- <div class="paz-logo">
-            <img src="/images/paz_logo.png">
-        </div> -->
-
         <div class="container">
             <div class="flex-container-search">
                 <a href="#">English</a>
-                <input type="search" />
-                <button>
-                    <img src="/images/search_button.png" width="100%">
-                </button>
+                <input type="search"/>
+                <a href="index.html">
+                    <img src="/images/search_button.png">
+                </a>
             </div>
 
             <ul class="flex-container">
@@ -32,7 +28,7 @@
                         <img src="/images/menu_home.png">
                     </a>
                 </li>
-                <li class="about">
+                <li>
                     <a class="top-menu" href="#">אודות</a>
                     <div class="inner-menu">
                         <a href="#">הסטוריה</a>
@@ -47,7 +43,7 @@
                     <img src="/images/menu_sep.png">
                     </a>
                 </li>
-                <li class="divisions">
+                <li>
                     <a class="top-menu" href="#">חטיבות</a>
                     <div class="inner-menu">
                         <a href="#">חטיבות</a>
@@ -60,7 +56,7 @@
                     <img src="/images/menu_sep.png">
                     </a>
                 </li>
-                <li class="corporate-responsibility">
+                <li>
                     <a class="top-menu" href="#">אחריות תאגידית</a>
                     <div class="inner-menu">
                         <a href="#">אחריות תאגידית</a>
@@ -73,7 +69,7 @@
                     <img src="/images/menu_sep.png">
                     </a>
                 </li>
-                <li class="Investor relations">
+                <li>
                     <a class="top-menu" href="#">קשרי משקיעים</a>
                     <div class="inner-menu">
                         <a href="#">פרופיל החברה</a>
@@ -87,7 +83,7 @@
                     </a>
                 </li>
                 </li>
-                <li class="Investor-relations">
+                <li>
                     <a class="top-menu" href="#">התחנות שלנו</a>
                     <div class="inner-menu">
                         <a href="#">התחנות שלנו</a>
@@ -100,7 +96,7 @@
                     </a>
                 </li>
                 </li>
-                <li class="Investor-relations">
+                <li>
                     <a class="top-menu" href="#">קריירה</a>
                     <div class="inner-menu">
                         <a href="#">לעבוד בפז</a>
@@ -114,7 +110,7 @@
                     </a>
                 </li>
 
-                <li class="Investor-relations">
+                <li>
                     <a class="top-menu" href="#">חדשות ומדיה</a>
                     <div class="inner-menu">
                         <a href="#">פרסומות</a>
@@ -172,7 +168,9 @@
                 <div class="content2">
                     <h5>כרטיס אשראי שופרסל וכרטיס אשראי יש</h5>
                     <img src="images/paz_250x110059890678.jpg">
-                    <a href="#">לפרטים נוספים</a>
+                    <a href="#">לפרטים נוספים
+                        <img src="images/read_more_yellow.png">
+                    </a>
                 </div>
             </div>
 
@@ -182,7 +180,8 @@
                 <div class="content2">
                     <h5>yellow click & pick</h5>
                     <img src="images/paz_250x110103131473.jpg">
-                    <a href="#">לפרטים נוספים</a>
+                    <a href="#">לפרטים נוספים<img src="images/read_more_yellow.png">
+                    </a>
                 </div>
             </div>
 
@@ -207,11 +206,19 @@
         </div>
     </main>
 
+    <!-- <p> texttexttexttexttexttexttext </p>
+    <p> texttexttexttexttexttexttext </p>
+    <p> texttexttexttexttexttexttext </p>
+    <p> texttexttexttexttexttexttext </p>
+    <p> texttexttexttexttexttexttext </p>
+    <p> texttexttexttexttexttexttext </p>
+    <p> texttexttexttexttexttexttext </p> -->
+
     <!-- ------------------------------------------------------------------------------------------------------- 
 ------------------------------------------------------------------------------------------------------------->
 
     <footer>
-        <div class="container">
+        <!-- <div class="container"> -->
             <div class="f-menu">
                 <a href="https://www.facebook.com/YellowPaz" target="_blank">
                     <img src="/images/fb_icon.png">
@@ -244,7 +251,7 @@
                 </a>
                 <a class="footer-menu" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
             </div>
-        </div>
+        <!-- </div> -->
 
     </footer>
 </body>
