--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <main class="container">
         <div class="flex-container-main-photo">
             <div class="cube">
-                <img src="images/1908364606615453350.jpg">
+                <img class="radius" src="images/1908364606615453350.jpg">
                 <div class="content">
                     <h5>קמעונאות ומסחר</h5>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
@@ -138,7 +138,7 @@
             </div>
 
             <div class="cube">
-                <img src="images/Picture-046410251500.jpg">
+                <img class="radius" src="images/Picture-046410251500.jpg">
                 <div class="content">
                     <h5>זיקוק</h5>
                     <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק
@@ -149,7 +149,7 @@
             </div>
 
             <div class="cube">
-                <img src="images/פזקר_-291_354410564000.jpg">
+                <img class="radius" src="images/פזקר_-291_354410564000.jpg">
 
                 <div class="content">
                     <h5>תעשיות ושירותים </h5>
@@ -223,6 +223,7 @@
                 <a href="https://www.facebook.com/YellowPaz" target="_blank">
                     <img src="/images/fb_icon.png">
                 </a>
+                <img src="/images/menu_sep.png">
                 <a class="footer-menu" href="#">עמוד הבית</a>
                 <img src="/images/menu_sep.png">
                 </a>
@@ -249,7 +250,7 @@
                 <a class="footer-menu" href="#">שטחי מסחר</a>
                 <img src="/images/menu_sep.png">
                 </a>
-                <a class="footer-menu" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
+                <a class="footer-menu-red" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
             </div>
         <!-- </div> -->
 
