--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="flex-container-search">
                 <a href="#">English</a>
-                <input type="search"/>
+                <input type="search" value="רשום מילת חיפוש"/>
                 <a href="index.html">
                     <img src="/images/search_button.png">
                 </a>
@@ -126,7 +126,7 @@
         <div class="flex-container-main-photo">
             <div class="cube">
                 <img class="radius" src="images/1908364606615453350.jpg">
-                <div class="content">
+                <div class="content1">
                     <h5>קמעונאות ומסחר</h5>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
                         בחדשנות,
@@ -139,7 +139,7 @@
 
             <div class="cube">
                 <img class="radius" src="images/Picture-046410251500.jpg">
-                <div class="content">
+                <div class="content1">
                     <h5>זיקוק</h5>
                     <p>פז זיקוק אשדוד (פז"א) היא חטיבת הזיקוק של קבוצת פז. החטיבה עוסקת בניהול פעילות בית הזיקוק
                         באשדודהחטיבה עוסקת בניהול פעילות בית הזיקוק באשדוד, הכוללת ייצור תזקיקי נפט...
@@ -151,7 +151,7 @@
             <div class="cube">
                 <img class="radius" src="images/פזקר_-291_354410564000.jpg">
 
-                <div class="content">
+                <div class="content1">
                     <h5>תעשיות ושירותים </h5>
                     <p>תחת חטיבת התעשיות והשירותים של פז פועלות מספר חברות בנות, המתמחות בפיתוח, ייצור ושיווק מוצרי
                         לוואי של נפט, ת בפיתוח, ייצור ושיווק מוצרי לוואי של נפט,ומובילות את השוק...
@@ -243,7 +243,7 @@
                 <img src="/images/menu_sep.png">
                 </a>
                 </li>
-                <a class="footer-menu" href="#">צור קשר</a>
+                <a class="footer-menu" href="contact.html">צור קשר</a>
                 <img src="/images/menu_sep.png">
                 </a>
                 </li>
