--- a/contact.html
+++ b/contact.html
@@ -123,17 +123,19 @@
     <!-- ---------------------------------------------------------------------- -->
     <div class="container">
 
-        <div class="flex-container">
+        <div class="flex-container-contact">
             <div class="container1">
                 <a href="index.html">צור קשר</a>
             </div>
 
             <div class="container2">
                 <a href="#">עמוד הבית</a>
-                <h1>צור קשר</h1>
+                <h3 id="title">צור קשר</h3>
                 <form>
-                    <h5> ליצירת קשר עם קשרי לקוחות אנא מלאו את הפרטים הבאים ואנו נשמח לעמוד לרשותכם :</h5>
-                    <p>* השדות המסומנים בכוכבית (*) הינם שדות חובה</p>
+                    <h3>צור קשר</h3>
+
+                    <p><strong> ליצירת קשר עם קשרי לקוחות אנא מלאו את הפרטים הבאים ואנו נשמח לעמוד לרשותכם :</strong></p>
+                    <p id="form title">* השדות המסומנים בכוכבית (*) הינם שדות חובה</p>
                     <div class="flex-form">
                         <label for="fname">* שם פרטי:</label>
                         <input type="text" id="fname" />
@@ -159,16 +161,29 @@
                 </form>
 
             </div>
-            <div class="container3">
-                <div>
-                    <img src="images/cube_bg.png">
-                    <p>* השדות המסומנים בכוכבית (*) הינם שדות חובה</p>
-                </div>
-                <div>
-                    <img src="images/cube_bg.png">
-                    <p>* השדות המסומנים בכוכבית (*) הינם שדות חובה</p>
 
+            <div class="container3">
+                <div class="content3">
+                    <h3>פרטי יצירת קשר</h3>
+                    <p> <strong>פז חברת נפט בע"מ </strong></p>
+                    <p> יורו פארק, בניין הולנד
+                        <br>
+                        קיבוץ יקום 60972
+                        <br>
+                        טל. שירות לקוחות 1-800-774-774
+                        <br>
+                        פקס.09-8641714</p>
                 </div>
+
+                <div class="content3">
+                    <h3>עוד בפז</h3>
+                    <p><strong>ליצירת קשר עם דוברות פז</strong></p>
+                    <a href="#">לחצו כאן>></a>
+                    <p><strong> רוצים לעבוד בפז?</strong></p>
+                    <a href="#">לחצו כאן>></a>
+                </div>
+
+
             </div>
         </div>
 
