--- a/contact.html
+++ b/contact.html
@@ -125,11 +125,13 @@
 
         <div class="flex-container-contact">
             <div class="container1">
-                <a href="index.html">צור קשר</a>
+                
+                <button><a href="index.html">צור קשר</a></button>
+
             </div>
 
             <div class="container2">
-                <a href="#">עמוד הבית</a>
+                <a href="#"> עמוד הבית ></a><span>צור קשר</span>
                 <h3 id="title">צור קשר</h3>
                 <form>
                     <h3>צור קשר</h3>
