--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Paz_Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -126,12 +126,12 @@
         <div class="flex-container-contact">
             <div class="container1">
                 
-                <button><a href="index.html">צור קשר</a></button>
+                <button><a href="#">צור קשר</a></button>
 
             </div>
 
             <div class="container2">
-                <a href="#"> עמוד הבית ></a><span>צור קשר</span>
+                <a href="index.html"> עמוד הבית ></a><span>צור קשר</span>
                 <h3 id="title">צור קשר</h3>
                 <form>
                     <h3>צור קשר</h3>
