--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Paz_Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,11 +21,11 @@
             </div>
 
             <ul class="flex-container">
-                <li> <img id="paz-logo" src="/images/paz_logo.png">
+                <li> <img id="paz-logo" src="images/paz_logo.png">
                 </li>
                 <li>
                     <a href="index.html">
-                        <img src="/images/menu_home.png">
+                        <img src="images/menu_home.png">
                     </a>
                 </li>
                 <li>
@@ -40,7 +40,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/images/menu_sep.png">
+                    <img src="images/menu_sep.png">
                     </a>
                 </li>
                 <li>
