--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 <a href="#">English</a>
                 <input type="search" value="רשום מילת חיפוש" />
                 <a href="index.html">
-                    <img src="/images/search_button.png">
+                    <img src="images/search_button.png">
                 </a>
             </div>
 
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <a href="index.html">
-                        <img src="/images/menu_home.png">
+                        <img src="images/menu_home.png">
                     </a>
                 </li>
                 <li>
@@ -40,7 +40,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/images/menu_sep.png">
+                    <img src="images/menu_sep.png">
                     </a>
                 </li>
                 <li>
@@ -53,7 +53,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/images/menu_sep.png">
+                    <img src="images/menu_sep.png">
                     </a>
                 </li>
                 <li>
@@ -66,7 +66,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="/images/menu_sep.png">
+                    <img src="images/menu_sep.png">
                     </a>
                 </li>
                 <li>
@@ -79,7 +79,7 @@
                         <a href="#">אסיפות כלליות</a>
                     </div>
                 <li>
-                    <img src="/images/menu_sep.png">
+                    <img src="images/menu_sep.png">
                     </a>
                 </li>
                 </li>
@@ -92,7 +92,7 @@
                         <a href="#">מועדונים</a>
                     </div>
                 <li>
-                    <img src="/images/menu_sep.png">
+                    <img src="images/menu_sep.png">
                     </a>
                 </li>
                 </li>
@@ -106,7 +106,7 @@
 
                 </li>
                 <li>
-                    <img src="/images/menu_sep.png">
+                    <img src="images/menu_sep.png">
                     </a>
                 </li>
 
@@ -195,34 +195,34 @@
     <footer>
         <div class="f-menu">
             <a href="https://www.facebook.com/YellowPaz" target="_blank">
-                <img src="/images/fb_icon.png">
+                <img src="images/fb_icon.png">
             </a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             <a class="footer-menu" href="#">עמוד הבית</a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             </a>
             <a class="footer-menu" href="#">מחירונים</a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             </a>
             </li>
             <a class="footer-menu" href="#">קריירה</a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             </a>
             </li>
             <a class="footer-menu" href="#">נגישות</a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             </a>
             </li>
             <a class="footer-menu" href="#">מפת אתר</a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             </a>
             </li>
             <a class="footer-menu" href="#">צור קשר</a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             </a>
             </li>
             <a class="footer-menu" href="#">שטחי מסחר</a>
-            <img src="/images/menu_sep.png">
+            <img src="images/menu_sep.png">
             </a>
             <a class="footer-menu-red" href="#">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
         </div>
