--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             </div>
 
             <ul class="flex-container">
-                <li> <img id="paz-logo" src="/images/paz_logo.png">
+                <li> <img id="paz-logo" src="images/paz_logo.png">
                 </li>
                 <li>
                     <a href="index.html">
