--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <main class="container">
         <div class="flex-container-main-photo">
             <div class="cube">
-                <img class="radius" src="images/paz.jpg">
+                <img class="radius" src="images/paz1.jpg">
                 <div class="content1">
                     <h5>קמעונאות ומסחר</h5>
                     <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת
